--- a/docker/Dockerfile-lb
+++ b/docker/Dockerfile-lb
@@ -7,6 +7,8 @@ RUN apk-install nginx curl runit@testing
 RUN curl -L -o /tmp/consul-template.zip http://releases.hashicorp.com/consul-template/0.12.0/consul-template_0.12.0_linux_amd64.zip
 RUN unzip /tmp/consul-template.zip -d /usr/local/bin
 
+RUN mkdir "/run/nginx"
+
 ADD nginx.service /etc/service/nginx/run
 ADD consul-template.service /etc/service/consul-template/run
 
